--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -456,20 +456,55 @@
                     <!-- Movies Content -->
                     <div v-if="selectedCategory === 'movies'" class="overflow-y-auto p-4 flex-1">
                         <div v-if="movies.length" class="mb-4">
-                            <fieldset class="border p-2 rounded">
-                                <legend class="flex items-center gap-2">
-                                    <span>الأفلام المتاحة</span>
-                                </legend>
-                                <div class="grid grid-cols-3 gap-2">
-                                    <button v-for="movie in movies" 
-                                            @click="sendEpisodeToBot(movie.EpisodeVideosIDs[0].VideoID, movie.EpisodeVideosIDs[0].Resolution, 0)"
-                                            class="bg-green-500 text-white p-2 rounded hover:bg-green-700">
-                                        {{ movie.EpisodeNumber.replace('الفيلم', '') }}
-                                    </button>
-                                </div>
-                            </fieldset>
+                        <fieldset class="border p-2 rounded">
+                            <legend class="flex items-center gap-2">
+                            <span>الأفلام المتاحة</span>
+                            <button v-if="selectedMovie" @click="resetMoviesView" class="p-1 hover:bg-gray-700 rounded">
+                                <img
+                                src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png"
+                                alt="رجوع"
+                                class="h-6 w-6"
+                                />
+                            </button>
+                            </legend>
+                            <div v-if="!selectedMovie" class="grid grid-cols-3 gap-2">
+                            <button
+                                v-for="movie in movies"
+                                :key="movie.id"
+                                @click="selectedMovie = movie"
+                                class="bg-green-500 text-white p-2 rounded hover:bg-green-700"
+                            >
+                                {{ movie.EpisodeNumber }}
+                            </button>
+                            </div>
+                            <div v-else class="flex flex-col justify-center gap-4">
+                            <div
+                                v-for="(video, index) in selectedMovie.EpisodeVideosIDs"
+                                :key="video.VideoID"
+                                class="relative flex flex-col gap-4"
+                            >
+                                <button
+                                :disabled="video.status === 'success'"
+                                @click="sendEpisodeToBot(video.VideoID, video.Resolution, index)"
+                                class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-700 flex items-center justify-center shadow-md disabled:opacity-50"
+                                >
+                                {{ video.Resolution }} ({{ video.Size }} MB)
+                                </button>
+                                <img
+                                v-if="video.status === 'success'"
+                                src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png"
+                                class="absolute right-0 top-0 w-6 h-6 ml-2"
+                                />
+                                <img
+                                v-if="video.status === 'error'"
+                                src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png"
+                                class="absolute right-0 top-0 w-6 h-6 ml-2"
+                                />
+                            </div>
+                            </div>
+                        </fieldset>
                         </div>
-                    </div>
+                    </div>  
 
                     <!-- Mangas Content -->
                     <div v-if="selectedCategory === 'mangas'" class="overflow-y-auto p-4 flex-1">
@@ -5269,6 +5304,7 @@
                     pageSize: 15,
                     showModal: false,
                     selectedEpisode: null,
+                    selectedMovie: null,
                     showMangaButtons: false,
                     filterBlackOrganization: false,
                     filterDetectiveBoys: false,
@@ -13984,6 +14020,10 @@
 
                 resetEpisodesView() {
                     this.selectedEpisode = null; // Reset to show episodes list
+                },
+
+                resetMoviesView() {
+                    this.selectedMovie = null;
                 },
             },
             
