--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -406,7 +406,7 @@
                     <!-- Episodes Content -->
                     <div v-if="selectedCategory === 'episodes'" class="overflow-y-auto p-4 flex-1">
                         <div v-if="groupedEpisodes.length" class="mb-4">
-                            <div class="flex flex-wrap gap-2 mb-4 justify-start"> <!-- Align buttons to the left -->
+                            <div class="flex flex-wrap gap-2 mb-4 justify-left"> <!-- Align buttons to the left -->
                                 <button v-for="(group, index) in groupedEpisodes" 
                                         @click="activeTab.episodes = index"
                                         :class="['px-3 py-1 rounded', activeTab.episodes === index ? 'bg-blue-500 text-white' : 'bg-gray-700']">
