--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -453,48 +453,55 @@
                         </div>
                     </div>
 
-<!-- Movies Content -->
-<div v-if="selectedCategory === 'movies'" class="overflow-y-auto p-4 flex-1">
-    <div v-if="movies.length" class="mb-4">
-        <fieldset class="border p-2 rounded">
-            <legend class="flex items-center gap-2">
-                <span>الأفلام المتاحة</span>
-                <button v-if="selectedMovie" @click="resetMoviesView" class="p-1 hover:bg-gray-700 rounded">
-                    <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="رجوع" class="h-6 w-6" />
-                </button>
-            </legend>
-            <div v-if="!selectedMovie" class="grid grid-cols-3 gap-2">
-                <button v-for="movie in movies" 
-                        @click="selectedMovie = movie"
-                        class="bg-green-500 text-white p-2 rounded hover:bg-green-700">
-                    {{ movie.EpisodeNumber.replace('الفيلم', '') }}
-                </button>
-            </div>
-            <div v-else class="flex flex-col justify-center gap-4">
-                <div v-for="(video, index) in selectedMovie.EpisodeVideosIDs" 
-                     :key="video.VideoID" 
-                     class="relative flex flex-col gap-4">
-                    <button
-                        :disabled="video.status === 'success'"
-                        @click="sendEpisodeToBot(video.VideoID, video.Resolution, index)"
-                        class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-700 flex items-center justify-center shadow-md disabled:opacity-50">
-                        {{ video.Resolution }} ({{ video.Size }} MB)
-                    </button>
-                    <img 
-                        v-if="video.status === 'success'" 
-                        src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png" 
-                        class="absolute right-0 top-0 w-6 h-6 ml-2"
-                    />
-                    <img 
-                        v-if="video.status === 'error'" 
-                        src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png" 
-                        class="absolute right-0 top-0 w-6 h-6 ml-2"
-                    />
-                </div>
-            </div>
-        </fieldset>
-    </div>
-</div>
+                    <!-- Movies Content -->
+                    <div v-if="selectedCategory === 'movies'" class="overflow-y-auto p-4 flex-1">
+                        <div v-if="groupedMovies.length" class="mb-4">
+                            <div class="flex flex-wrap gap-2 mb-4">
+                                <button v-for="(group, index) in groupedMovies" 
+                                        @click="activeTab.movies = index"
+                                        :class="['px-3 py-1 rounded', activeTab.movies === index ? 'bg-blue-500 text-white' : 'bg-gray-700']">
+                                    {{ group.range }}
+                                </button>
+                            </div>
+                            <fieldset class="border p-2 rounded">
+                                <legend class="flex items-center gap-2">
+                                    <span>الأفلام المتاحة</span>
+                                    <button v-if="selectedEpisode" @click="resetMoviesView" class="p-1 hover:bg-gray-700 rounded">
+                                        <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="رجوع" class="h-6 w-6" />
+                                    </button>
+                                </legend>
+                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2">
+                                    <button v-for="episode in groupedMovies[activeTab.movies]?.items" 
+                                            @click="selectedEpisode = episode"
+                                            class="bg-green-500 text-white p-2 rounded hover:bg-green-700">
+                                        {{ episode.EpisodeNumber }}
+                                    </button>
+                                </div>
+                                <div v-else class="flex flex-col justify-center gap-4">
+                                    <div v-for="(video, index) in selectedEpisode.EpisodeVideosIDs" 
+                                        :key="video.VideoID" 
+                                        class="relative flex flex-col gap-4">
+                                        <button
+                                            :disabled="video.status === 'success'"
+                                            @click="sendEpisodeToBot(video.VideoID, video.Resolution, index)"
+                                            class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-700 flex items-center justify-center shadow-md disabled:opacity-50">
+                                            {{ video.Resolution }} ({{ video.Size }} MB)
+                                        </button>
+                                        <img 
+                                            v-if="video.status === 'success'" 
+                                            src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png" 
+                                            class="absolute right-0 top-0 w-6 h-6 ml-2"
+                                        />
+                                        <img 
+                                            v-if="video.status === 'error'" 
+                                            src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png" 
+                                            class="absolute right-0 top-0 w-6 h-6 ml-2"
+                                        />
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
 
                     <!-- Mangas Content -->
                     <div v-if="selectedCategory === 'mangas'" class="overflow-y-auto p-4 flex-1">
@@ -5893,9 +5900,15 @@
                     }));
                 },
 
-                movies() {
+                groupedMovies() {
+                    const chunkSize = 5;
                     return this.episodes
-                        .filter(e => e.EpisodeNumber.includes('الفيلم') && e.EpisodeVideosIDs && e.EpisodeVideosIDs.length > 0);
+                        .filter(e => e.EpisodeNumber.includes('الفيلم'))
+                        .reduce((acc, _, i, arr) => (i % chunkSize) ? acc : 
+                            [...acc, { 
+                                range: `${i+1}-${Math.min(i+chunkSize, arr.length)}`, 
+                                items: arr.slice(i, i+chunkSize)
+                            }], []);
                 },
 
                 groupedMangas() {
@@ -14007,7 +14020,7 @@
                 },
 
                 resetMoviesView() {
-                    this.selectedMovie = null; // Reset to show movies list
+                    this.selectedEpisode = null;
                 },
 
             },
