--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -404,7 +404,7 @@
                     </div>
 
                     <!-- Episodes Content -->
-                    <div v-if="selectedCategory === 'episodes'" class="overflow-y-auto p-4 flex-1">
+                    <div v-if="selectedCategory === 'episodes'" class="overflow-y-auto p-4 flex-1 always-visible-scrollbar">
                         <div v-if="groupedEpisodes.length" class="mb-4">
                             <div class="flex flex-wrap gap-2 mb-4 justify-center" dir="ltr"> <!-- Align buttons to the left -->
                                 <button v-for="(group, index) in groupedEpisodes" 
@@ -455,7 +455,7 @@
                     </div>
 
                     <!-- Movies Content -->
-                    <div v-if="selectedCategory === 'movies'" class="overflow-y-auto p-4 flex-1">
+                    <div v-if="selectedCategory === 'movies'" class="overflow-y-auto p-4 flex-1 always-visible-scrollbar">
                         <div v-if="groupedMovies.length" class="mb-4">
                             <div class="flex flex-wrap gap-2 mb-4 justify-center" dir="ltr">
                                 <button v-for="(group, index) in groupedMovies" 
@@ -506,7 +506,7 @@
                     </div>
 
                     <!-- Mangas Content -->
-                    <div v-if="selectedCategory === 'mangas'" class="overflow-y-auto p-4 flex-1">
+                    <div v-if="selectedCategory === 'mangas'" class="overflow-y-auto p-4 flex-1 always-visible-scrollbar">
                         <div v-if="groupedMangas.length" class="mb-4">
                             <div class="flex flex-wrap gap-2 mb-4 justify-center" dir="ltr"> <!-- Align buttons to the left -->
                                 <button v-for="(group, index) in groupedMangas" 
