--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5035,7 +5035,11 @@
                                 </fieldset>                                                                    
 
                                 <div  
-                                    v-if="(selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'error')) || (selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'error'))"
+                                v-if="(selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'error')) ||
+                                (selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'error')) ||
+                                (selectedManga?.status === 'error') ||
+                                (selectedEpisode?.status === 'error') ||
+                                (selectedAnime?.status === 'error')"                         
                                     class="fixed z-10 inset-0 overflow-y-auto bg-black bg-opacity-50 flex items-center justify-center"
                                     >
                                     <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[90vh] overflow-hidden flex flex-col">
