--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -403,6 +403,51 @@
                         </fieldset>
                     </div>
 
+                    <!-- Error Overlay (if any error condition is met) -->
+                    <div 
+                    v-if="(selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'error')) ||
+                        (selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'error')) ||
+                        (selectedManga?.status === 'error') ||
+                        (selectedEpisode?.status === 'error') ||
+                        (selectedAnime?.status === 'error')"
+                    class="absolute inset-0 z-20 flex items-center justify-center bg-black bg-opacity-50"
+                >
+                    <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[90vh] overflow-hidden flex flex-col">
+                    <!-- Sticky Header Section -->
+                    <div class="sticky top-0 bg-cyan-900 pt-4 pl-4 pr-4 pb-2">
+                        <h2 class="text-lg text-red-500 font-bold text-center">{{ errorMessage }}</h2>
+                    </div>
+
+                    <!-- Scrollable Content -->
+                    <div class="overflow-y-auto p-4 flex-1">
+                        <p class="text-lg text-white text-center font-bold mb-4">
+                        تأكد من أن البوت لديه صلاحية إرسال الرسائل لك من خلال اشتراكك فيه، وذلك بالضغط على زر 'Start' أو 'Restart' أو 'بدء' كما هو موضح في الصورة 👇
+                        </p>
+                        <img
+                        src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/error_hint.png"
+                        alt="Error Hint"
+                        class="mb-4 w-full rounded"
+                        />
+                        <p class="text-lg text-white font-bold text-center mt-4">
+                        إذا لم يظهر لك الزر، فهذا يعني أنك مشترك بالفعل في البوت.
+                        </p>
+                    </div>
+
+                    <!-- Footer Section -->
+                    <div class="p-4 bg-cyan-900 flex justify-between">
+                        <a
+                        href="https://t.me/DCRef_bot"
+                        class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700"
+                        >
+                        أضغط هنا للذهاب إلى البوت
+                        </a>
+                        <button @click="clearError()" class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400">
+                        إغلاق
+                        </button>
+                    </div>
+                    </div>
+                </div>
+
                     <!-- Episodes Content -->
                     <div v-if="selectedCategory === 'episodes'" class="overflow-y-auto p-4 flex-1 always-visible-scrollbar">
                         <div v-if="groupedEpisodes.length" class="mb-4">
@@ -5034,44 +5079,52 @@
                                     </div>
                                 </fieldset>                                                                    
 
-                                <div 
-  v-if="hasError"
-  class="fixed z-10 inset-0 overflow-y-auto bg-black bg-opacity-50 flex items-center justify-center"
->
-  <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[90vh] overflow-hidden flex flex-col">
-    <!-- Sticky Header Section -->
-    <div class="sticky top-0 bg-cyan-900 pt-4 pl-4 pr-4 pb-2">
-      <h2 class="text-lg text-red-500 font-bold text-center">{{ errorMessage }}</h2>
-    </div>
+                                <div  
+                                    v-if="(selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'error')) || (selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'error'))"
+                                    class="fixed z-10 inset-0 overflow-y-auto bg-black bg-opacity-50 flex items-center justify-center"
+                                    >
+                                    <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[90vh] overflow-hidden flex flex-col">
+                                        <!-- Sticky Header Section -->
+                                        <div class="sticky top-0 bg-cyan-900 pt-4 pl-4 pr-4 pb-2">
+                                        <h2 class="text-lg text-red-500 font-bold text-center">{{ errorMessage }}</h2>
+                                        </div>
 
-    <!-- Scrollable Content -->
-    <div class="overflow-y-auto p-4 flex-1">
-      <p class="text-lg text-white text-center font-bold mb-4">
-        تأكد من أن البوت لديه صلاحية إرسال الرسائل لك من خلال اشتراكك فيه، وذلك بالضغط على زر 'Start' أو 'Restart' أو 'بدء' كما هو موضح في الصورة 👇
-      </p>
-      <img
-        src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/error_hint.png"
-        alt="Error Hint"
-        class="mb-4 w-full rounded"
-      />
+                                        <!-- Scrollable Content -->
+                                        <div class="overflow-y-auto p-4 flex-1">
+                                        <p class="text-lg text-white text-center font-bold mb-4">
+                                            تأكد من أن البوت لديه صلاحية إرسال الرسائل لك من خلال اشتراكك فيه، وذلك بالضغط على زر 'Start' أو 'Restart' أو 'بدء' كما هو موضح في الصورة 👇
+                                        </p>
+                                        <img
+                                            src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/error_hint.png"
+                                            alt="Error Hint"
+                                            class="mb-4 w-full rounded"
+                                        />
+                                        <!-- Display Telegram's error message -->
+                                        <!-- <p v-if="errorMessage" class="text-lg text-white text-center font-bold mt-4">
+                                            {{ errorMessage }}
+                                        </p> -->
+                                        <p class="text-lg text-white font-bold text-center mt-4">
+                                            إذا لم يظهر لك الزر، فهذا يعني أنك مشترك بالفعل في البوت.
+                                        </p>
+                                        </div>
 
-      <p class="text-lg text-white font-bold text-center mt-4">
-        إذا لم يظهر لك الزر، فهذا يعني أنك مشترك بالفعل في البوت.
-      </p>
-    </div>
-
-    <!-- Footer Section -->
-    <div class="p-4 bg-cyan-900 flex justify-between">
-      <a href="https://t.me/DCRef_bot" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">
-        أضغط هنا للذهاب إلى البوت
-      </a>
-      <button @click="clearError()" class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400">
-        إغلاق
-      </button>
-    </div>
-  </div>
-</div>
-                               
+                                        <!-- Footer Section -->
+                                        <div class="p-4 bg-cyan-900 flex justify-between">
+                                        <a
+                                            href="https://t.me/DCRef_bot"
+                                            class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700"
+                                        >
+                                            أضغط هنا للذهاب إلى البوت
+                                        </a>
+                                        <button
+                                            @click="clearError()"
+                                            class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400"
+                                        >
+                                            إغلاق
+                                        </button>
+                                        </div>
+                                    </div>
+                                </div>                               
 
                                 <p v-if="selectedEpisode && selectedEpisode.EpisodeSeason !== ''" class="mb-2 text-lg">
                                     <span>الموسم: </span>{{ selectedEpisode.EpisodeSeason }} ({{ selectedEpisode.EpisodeSeasonCount }} حلقة)
@@ -5940,39 +5993,29 @@
                 },
 
                 groupedMangas() {
-                const allMangas = [
-                    ...this.mangas.flatMap(m => m.MangasIDs),
-                    ...this.episodes.flatMap(e => e.EpisodeMangasIDs || [])
-                ].sort((a, b) => a.MangaNumber - b.MangaNumber);
+  const allMangas = [
+    ...this.mangas.flatMap(m => m.MangasIDs),
+    ...this.episodes.flatMap(e => e.EpisodeMangasIDs || [])
+  ].sort((a, b) => a.MangaNumber - b.MangaNumber);
 
-                // Remove duplicates by MangaNumber
-                const uniqueMangas = Array.from(new Set(allMangas.map(m => m.MangaNumber)))
-                    .map(mangaNumber => allMangas.find(m => m.MangaNumber === mangaNumber));
+  // Remove duplicates by MangaNumber
+  const uniqueMangas = Array.from(new Set(allMangas.map(m => m.MangaNumber)))
+    .map(mangaNumber => allMangas.find(m => m.MangaNumber === mangaNumber));
 
-                const chunkSize = 100;
-                return uniqueMangas.reduce((acc, _, i, arr) => {
-                    if (i % chunkSize === 0) {
-                    return [
-                        ...acc,
-                        {
-                        range: `${arr[i].MangaNumber}-${arr[Math.min(i + chunkSize - 1, arr.length - 1)].MangaNumber}`,
-                        items: arr.slice(i, i + chunkSize)
-                        }
-                    ];
-                    }
-                    return acc;
-                }, []);
-                },
-
-                hasError() {
-                    return (
-                    this.selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'error') ||
-                    this.selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'error') ||
-                    this.selectedManga?.status === 'error' ||
-                    this.selectedEpisode?.status === 'error' ||
-                    this.selectedAnime?.status === 'error'
-                    );
-                },
+  const chunkSize = 100;
+  return uniqueMangas.reduce((acc, _, i, arr) => {
+    if (i % chunkSize === 0) {
+      return [
+        ...acc,
+        {
+          range: `${arr[i].MangaNumber}-${arr[Math.min(i + chunkSize - 1, arr.length - 1)].MangaNumber}`,
+          items: arr.slice(i, i + chunkSize)
+        }
+      ];
+    }
+    return acc;
+  }, []);
+},
 
                 filteredEpisodes() {
                     const searchQuery = this.normalizeText(this.searchQuery);
@@ -14171,12 +14214,6 @@
                         }
                     });
                 }
-
-                console.log("Checking Errors:");
-                console.log("selectedEpisode:", this.selectedEpisode);
-                console.log("selectedManga:", this.selectedManga);
-                console.log("selectedAnime:", this.selectedAnime);
-                console.log("hasError:", this.hasError);
             },
 
             unmounted() {
