--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -454,11 +454,12 @@
                     <div v-if="selectedCategory === 'episodes'" class="overflow-y-auto p-4 flex-1 always-visible-scrollbar">
                         <div v-if="groupedEpisodes.length" class="mb-4">
                             <div class="flex flex-wrap gap-2 mb-4 justify-center" dir="ltr"> <!-- Align buttons to the left -->
-                                <button v-for="(group, index) in groupedEpisodes" 
-                                        @click="activeTab.episodes = index"
-                                        :class="['px-3 py-1 rounded', activeTab.episodes === index ? 'bg-blue-500 text-white' : 'bg-gray-700']">
-                                    {{ group.range }}
-                                </button>
+                                <button 
+                                v-for="(group, index) in groupedEpisodes" 
+                                @click="handleEpisodeGroupChange(index)" 
+                                :class="['px-3 py-1 rounded', activeTab.episodes === index ? 'bg-blue-500 text-white' : 'bg-gray-700']">
+                                {{ group.range }}
+                            </button>                            
                             </div>
                             <fieldset class="border p-2 rounded">
                                 <legend class="flex items-center gap-2">
@@ -468,11 +469,12 @@
                                     </button>
                                 </legend>
                                 <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2">
-                                    <button v-for="episode in groupedEpisodes[activeTab.episodes]?.items" 
-                                            @click="selectedEpisode = episode"
-                                            class="bg-blue-500 text-white p-2 rounded hover:bg-green-500">
-                                        {{ episode.EpisodeNumber }}
-                                    </button>
+                                    <button 
+                                    v-for="episode in groupedEpisodes[activeTab.episodes]?.items" 
+                                    @click="selectEpisode(episode)" 
+                                    class="bg-blue-500 text-white p-2 rounded hover:bg-green-500">
+                                    {{ episode.EpisodeNumber }}
+                                </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <span class="text-lg font-bold text-center">{{ selectedEpisode.EpisodeNumber }}</span>
@@ -14201,7 +14203,18 @@
                     movies: 0,
                     mangas: 0
                 };
-                },
+            },
+
+            handleEpisodeGroupChange(index) {
+                if (this.selectedEpisode) {
+                    this.resetEpisodesView(); // Go back to episode list before changing tabs
+                }
+                this.activeTab.episodes = index; // Switch to new episode group
+            },
+
+            selectEpisode(episode) {
+                this.selectedEpisode = episode;
+            },
 
             },
             
