--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13918,7 +13918,7 @@
                     const body = {
                         chat_id: chatId,
                         video: fileId,
-                        //cover: "AgACAgQAAxkBAAI3s2ewNOY84totnb69iVftuqPfy5gvAAI9xzEb4AyBUcVbtkVUYFp1AQADAgADeQADNgQ", // Added cover
+                        cover: "BQACAgQAAxkBAAI3vmewRTcAAdKygDQ3pmNhTPBvoN2JKAACBBYAAuAMgVGOA33uVWKAezYE", // Added cover
                         caption: caption,
                         parse_mode: "Markdown",
                         protect_content: true,
