--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -483,7 +483,7 @@
                                         class="relative flex flex-col gap-4">
                                         <button
                                             :disabled="video.status === 'success'"
-                                            @click="sendEpisodeToBot(video.VideoID, video.Resolution, index)"
+                                            @click="sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index)"
                                             class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-green-500 flex items-center justify-center shadow-md disabled:opacity-50">
                                             {{ video.Resolution }} ({{ video.Size }} MB)
                                         </button>
@@ -536,7 +536,7 @@
                                         class="relative flex flex-col gap-4">
                                         <button
                                             :disabled="video.status === 'success'"
-                                            @click="sendEpisodeToBot(video.VideoID, video.Resolution, index)"
+                                            @click="sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index)"
                                             class="bg-amber-700 text-white px-6 py-2 rounded hover:bg-green-500 flex items-center justify-center shadow-md disabled:opacity-50">
                                             {{ video.Resolution }} ({{ video.Size }} MB)
                                         </button>
@@ -5293,7 +5293,7 @@
                                             class="relative flex flex-col gap-4">
                                             <button
                                                 :disabled="video.status === 'success'"
-                                                @click="() => { sendEpisodeToBot(video.VideoID, video.Resolution, index); }"
+                                                @click="() => { sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index); }"
                                                 class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-700 flex items-center justify-center shadow-md disabled:opacity-50">
                                                 {{ video.Resolution }} ({{ video.Size }} MB)
                                             </button>
@@ -13879,7 +13879,7 @@
                     }
                 },
 
-                async sendEpisodeToBot(videoID, resolution, index) {
+                async sendEpisodeToBot(videoID, resolution, size, index) {
                     if (!this.selectedEpisode.EpisodeNumber) {
                         return;
                     }
@@ -13904,7 +13904,7 @@
                     console.log(chatId);
 
                     // Create the caption with the updated label and episode number
-                    const caption = `*${label} ${episodeNumber} (${resolution})*`;
+                    const caption = `*${label} ${episodeNumber}\n الجودة:${resolution}\n الحجم:${size} MB*`;
 
                     // Set the status to 'sending'
                     this.selectedEpisode.EpisodeVideosIDs[index].status = 'sending';
