--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13904,7 +13904,7 @@
                     console.log(chatId);
 
                     // Create the caption with the updated label and episode number
-                    const caption = `*${label} ${episodeNumber}\n الجودة:${resolution}\n الحجم:${size} MB*`;
+                    const caption = `*${label} ${episodeNumber}\n الجودة: ${resolution}\n الحجم: ${size} ميجا*`;
 
                     // Set the status to 'sending'
                     this.selectedEpisode.EpisodeVideosIDs[index].status = 'sending';
