--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5045,7 +5045,7 @@
                                     <span>خاصة: </span>
                                     <span v-if="selectedEpisode.EpisodeSpecial === '1'"> (ساعة)</span>
                                     <span v-else-if="selectedEpisode.EpisodeSpecial === '2'"> (ساعتين)</span>
-                                    <span v-else>لايوجد</span>
+                                    <!-- <span v-else>لايوجد</span> -->
                                 </p>
 
                                 <fieldset 
