--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5053,7 +5053,7 @@
                                       <span v-else-if="selectedEpisode.EpisodeType === 'ث'">مانغا</span>
                                       <span v-else>{{ selectedEpisode.EpisodeType }}</span>
                                       <!-- Append (أوفا) if EpisodeNumber includes "قصة قصيرة" -->
-                                      <span v-if="selectedEpisode.EpisodeNumber.includes('قصة قصيرة') || selectedEpisode.EpisodeNumber.includes('أوفا')"> (أوفا)</span>
+                                      <span v-if="selectedEpisode.EpisodeNumber.includes('قصة قصيرة')"> (أوفا)</span>
                                     </span>
                                     
                                     <span v-else>
